--- a/frontend/src/components/Perfil.css
+++ b/frontend/src/components/Perfil.css
@@ -13,7 +13,7 @@
 @media (max-width: 768px) {
   .perfil-container {
     margin: 0;
-    margin-top: 110px;
+    margin-top: 110px !important;
     padding: 0;
     border-radius: 0;
   }
